# ddrc

./: Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: Familie Geburten.csv  Sicherheit.csv  Wirtschaftliche Lage.csv  election_nb.csv  migration.csv
data/raw/: Erneubare Energie.csv  Familie Geburten.csv  Wohnungsnot_Zuwanderungsdruck.csv  economy.csv  inner_security.csv  migration.csv
notebooks/: clean.py
plots/: crimes.py  economy.py  election.py  election_2025.py  land_prices.py  migration.py  plots.py  straftaten.py
src/: clean.py  dfp.py
